<resources>
    <string name="app_name">Shows-Duje</string>
    <string name="dialog_question">Are you sure you want to go back?</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="shows">Shows</string>
    <string name="episodes">Episodes</string>
    <string name="someone_has_fallen_asleep">Someone has fallen asleep.</string>
    <string name="don_t_wake_him_up">Don\'t wake him up.</string>
    <string name="add_some_episodes">Add some episodes</string>
    <string name="you_re_in">You’re in!</string>
    <string name="episode_description">Episode description</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="change_photo">Change photo</string>
    <string name="default_season_episode">S 01, E 01</string>
    <string name="episode_title">Episode title</string>
    <string name="up_to_date">Everything is up to date</string>
    <string name="save">SAVE</string>
    <string name="season_episode">Season &amp; episode</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="question_mark">\?</string>
    <string name="remember_me">Remember me</string>
    <string name="date_format">ddMMyyyy_HHmmss</string>
    <string name="add_episode">Add Episode</string>
    <string name="external_storage_permission">Please allow this app to use camera and external storage</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="username">Username</string>
    <string name="OK">OK</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="e_mail">e-mail</string>
    <string name="password_again">Password again</string>
    <string name="register_button">REGISTER</string>
    <string name="wrong_input">Wrong input</string>
    <string name="user_var">user</string>
    <string name="session_timed_out">Session timed out, you need to log in again</string>
    <string name="password_dont_match">Passwords don\'t match</string>
    <string name="splash_shows">shows</string>
    <string name="all_fields_must_be_filled">All fields must be filled!</string>
    <string name="wrong_email_input">Wrong email input</string>
    <string name="password_not_long_enough">Password not long enough!</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="chose_photo">You must choose photo</string>
    <string name="description_characters">Description must have at least 50 characters</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment..</string>
    <string name="sorry_we_don_t_have_comments_yet">Sorry, we don’t have comments yet.</string>
    <string name="be_first_one">Be first who will write a review.</string>
    <string name="no_internet">No internet connection, please connect to internet</string>
</resources>
