<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/registerToolbar"
            android:background="@color/white"
            app:title="Register"/>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText android:layout_width="@dimen/dimens0dp"
                      android:layout_height="wrap_content"
                      android:id="@+id/emailEditText"
                      android:hint="@string/e_mail"
                      android:layout_marginEnd="@dimen/dimens16dp"
                      android:layout_marginStart="@dimen/dimens16dp"
                      android:paddingBottom="@dimen/dimens16dp"
                      android:layout_marginTop="@dimen/dimens32dp"
                      app:layout_constraintTop_toTopOf="parent"
                      android:textColor="@color/textColor"
                      android:lineSpacingExtra="@dimen/dimens6sp"
                      android:fontFamily="@font/karla_bold"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstTimeTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens16dp"
                    android:layout_marginStart="@dimen/dimens16dp"
                    android:layout_marginEnd="@dimen/dimens16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailEditText"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/ic_show_password"
                    android:hint="@string/password">

                <EditText
                        android:id="@+id/passwordFirstTime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/dimens16sp"
                        android:textColor="@color/textColor"
                        android:paddingBottom="@dimen/dimens16dp"
                        android:fontFamily="@font/karla_bold"
                        android:lineSpacingExtra="@dimen/dimens6sp"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/secondTimeTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens16dp"
                    android:layout_marginStart="@dimen/dimens16dp"
                    android:layout_marginEnd="@dimen/dimens16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/firstTimeTextInputLayout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/ic_show_password"
                    android:hint="@string/password_again">

                <EditText
                        android:id="@+id/passwordSecondTime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/dimens16sp"
                        android:textColor="@color/textColor"
                        android:paddingBottom="@dimen/dimens16dp"
                        android:fontFamily="@font/karla_bold"
                        android:lineSpacingExtra="@dimen/dimens6sp"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button android:layout_width="@dimen/dimens0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerUserButton"
                    app:layout_constraintTop_toBottomOf="@id/secondTimeTextInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/register_button"
                    android:background="@drawable/rounded_button"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/dimens32dp"
                    android:layout_marginStart="@dimen/dimens16dp"
                    android:layout_marginEnd="@dimen/dimens16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>